[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
apq-core = { workspace = true  }
bytemuck = { version = "1.23.0", features = ["derive"] }
lib-sokoban = "0.3.3"
pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
uint = "0.10.0"

[dev-dependencies]
litesvm = "0.6.1"
solana-account = "2.2"
solana-instruction = "2.2"
solana-keypair = "2.2"
solana-program = "2.2"
solana-pubkey = "2.2"
solana-signature = "2.2"
solana-signer = "2.2"
solana-transaction = "2.2"
